--- a/mgussegdlet/app/src/main/assets/style.css
+++ b/mgussegdlet/app/src/main/assets/style.css
@@ -1,4 +1,5 @@
 #divek {
+    opacity: 0.95;
     padding: 4px;
     border-color: black;
     border: solid;
@@ -10,6 +11,7 @@
 }
 
 #divszalagcim {
+  opacity: 0.95;
   padding: 4px;
   border-color: black;
   border: solid;
@@ -18,10 +20,14 @@
   font-size: 10px;
   text-align: right;
 
-  background: linear-gradient(-45deg, #cd8772, #c37b97, #72acc1, #2f816e);
+  background: linear-gradient(-45deg, #a91f1f, #0f0c0d, #d5d51c, #f2f8f6);
   background-size: 400%, 400%;
   animation: gradient 15s ease infinite;
 
+}
+
+tr {
+  opacity: 0.95;
 }
 
 @keyframes gradient {
@@ -35,3 +41,10 @@
     background-position: 0% 50%;
   }
 }
+
+body {
+  background-image: url("htmlmedia/ynev_poszter_lowres.jpg");
+  background-size: 200%;
+  background-position: center;
+}
+
