--- a/mgussegdlet/app/src/main/assets/style2.css
+++ b/mgussegdlet/app/src/main/assets/style2.css
@@ -4,12 +4,12 @@ body {
 
 .circle {
     margin: 70px auto;
-    width: 10%;
-    height: 54px;
+    width: 50px;
+    height: 50px;
     border: 5px solid rgba(255, 255, 255, 0.2);
     border-radius: 50%;
     border-top-color: #fff;
-    animation: spin 2s infinite;
+    animation: spin 3s infinite;
 
 }
 
@@ -19,3 +19,19 @@ body {
     }
 }
 
+.circle2 {
+    margin: 70px auto;
+    width: 50px;
+    height: 50px;
+    border: 5px solid rgba(13, 22, 27, 1);
+    border-radius: 50%;
+    border-top-color: rgb(164, 194, 31);
+    animation: spin 1s infinite;
+
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
