--- a/mgussegdlet/app/src/main/assets/style2.css
+++ b/mgussegdlet/app/src/main/assets/style2.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #004c66;
+    background-color: grey;
 }
 
 .circle {
@@ -27,7 +27,6 @@ body {
     border-radius: 50%;
     border-top-color: rgb(164, 194, 31);
     animation: spin2 1s infinite;
-
 }
 
 @keyframes spin {
@@ -39,5 +38,22 @@ body {
 @keyframes spin2 {
     100% {
         transform: rotate(-360deg);
+    }
+}
+
+#gomb {
+    padding: 4px;
+    width: 120px;
+    border-radius: 4px;
+    border-width: 1px;
+    background-color: white;
+    animation: come 5s forwards;
+    box-shadow: 3px black;
+}
+
+@keyframes come {
+    100% {
+        transform: translate(72px, 0px);
+        background-color: lightblue;
     }
 }
