--- a/mgussegdlet/app/src/main/assets/style.css
+++ b/mgussegdlet/app/src/main/assets/style.css
@@ -27,7 +27,7 @@
 }
 
 table {
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(3px);
 }
 
 tr {
@@ -51,20 +51,11 @@ td {
 }
 
 
-#rune {
-  position: absolute;
-  z-index: -1;
+body {
+  background-image: url("htmlmedia/satan.jpg");
+  background-position: 50% 90%;
+  position: static;
   width: 100%;
-  object-fit: fill;
-  backdrop-filter: blur(5px);
-  display: block;
-  left: 0px;
-  top: 0px;
-  animation: forog 90s infinite;
-}
-
-@keyframes forog {
-  100% {
-      transform: rotate(360deg);
-  }
+  height: 100%;
+  size: 100%;
 }
