--- a/mgussegdlet/app/src/main/assets/style2.css
+++ b/mgussegdlet/app/src/main/assets/style2.css
@@ -1,59 +1,33 @@
 body {
-    background-color: grey;
+   background-color: grey; 
 }
 
-.circle {
-    margin: 70px auto;
-    width: 50px;
-    height: 50px;
-    border: 5px solid rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
-    border-top-color: #fff;
-    animation: spin 3s infinite;
-
+#table1 {
+    text-align: center;
 }
 
-@keyframes spin {
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-.circle2 {
-    margin: 70px auto;
-    width: 50px;
-    height: 50px;
-    border: 5px solid rgba(13, 22, 27, 1);
-    border-radius: 50%;
-    border-top-color: rgb(164, 194, 31);
-    animation: spin2 1s infinite;
-}
-
-@keyframes spin {
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes spin2 {
-    100% {
-        transform: rotate(-360deg);
-    }
-}
-
-#gomb {
+button {
     padding: 4px;
     width: 120px;
-    border-radius: 4px;
-    border-width: 1px;
-    background-color: white;
-    animation: come 5s forwards;
-    box-shadow: 3px black;
+    text-align: center;
+    border-radius: 3px;
+    border: 1px;
 }
 
-@keyframes come {
-    100% {
-        transform: translate(72px, 0px);
-        background-color: lightblue;
-    }
+td {
+    letter-spacing: 0px;
+    top: 1%;
+    bottom: 1%;
+    left: 1%;
+    right: 1%;
+    text-align: center;
+}
+
+#table2 {
+    text-align: center;
+}
+
+.buttons {
+    height: 191px;
+    width: 191px;
 }
