--- a/mgussegdlet/app/src/main/assets/style2.css
+++ b/mgussegdlet/app/src/main/assets/style2.css
@@ -1,33 +1,30 @@
-body {
-   background-color: grey; 
-}
 
-#table1 {
-    text-align: center;
+body {
+    background-image: url("htmlmedia/ynev_poszter_lowres.jpg");
+    background-repeat: no-repeat;
+    background-size: 300%;
+    background-position: 70%;
+    backdrop-filter: blur(3px);
+    animation: drop 4s forwards;
+    border-radius: 5%;
 }
 
 button {
-    padding: 4px;
-    width: 120px;
-    text-align: center;
-    border-radius: 3px;
+    width: 100%;
+    padding: 20px;
+    font-size: 24px;
+    opacity: 0.7;
+    margin-top: 20px;
+    border-radius: 12px;
     border: 1px;
 }
 
-td {
-    letter-spacing: 0px;
-    top: 1%;
-    bottom: 1%;
-    left: 1%;
-    right: 1%;
-    text-align: center;
+table {
+    margin-top: 0%;
 }
 
-#table2 {
-    text-align: center;
-}
-
-.buttons {
-    height: 191px;
-    width: 191px;
+@keyframes drop {
+    100% {
+        transform: translateY(30%);
+    }
 }
