--- a/mgussegdlet/app/src/main/assets/style.css
+++ b/mgussegdlet/app/src/main/assets/style.css
@@ -22,12 +22,12 @@
 
   background: linear-gradient(-45deg, #c2adad, #0f0c0d, #525855, #41544d);
   background-size: 400%, 400%;
-  animation: gradient 15s ease infinite;
+  animation: gradient 5s ease infinite;
 
 }
 
 table {
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(1px);
 }
 
 tr {
@@ -52,10 +52,8 @@ td {
 
 
 body {
-  background-image: url("htmlmedia/satan.jpg");
-  background-position: 50% 90%;
-  position: static;
+  background-image: url("htmlmedia/kargen3.jpg");
+  background-size: 150%;
   width: 100%;
   height: 100%;
-  size: 100%;
 }
