--- a/mgussegdlet/app/src/main/assets/stylevilag.css
+++ b/mgussegdlet/app/src/main/assets/stylevilag.css
@@ -1,4 +1,6 @@
 
+
+
 .buttons {
     padding: 6px 4px;
     box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.5);
@@ -30,7 +32,7 @@ table {
     position: absolute;
     width: 60px;
     height: 60px;
-    border: 4px solid rgb(245, 2, 2);
+    border: 2px solid rgb(245, 2, 2);
     opacity: 1;
     border-radius: 50%;
     animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
@@ -78,4 +80,9 @@ table {
 #sirenar {
     margin-top: 1470px;
     margin-left: 530px;
+}
+
+#riegoy {
+  margin-top: 1390px;
+  margin-left: 750px;
 }
