--- a/mgussegdlet/app/src/main/assets/stylevilag.css
+++ b/mgussegdlet/app/src/main/assets/stylevilag.css
@@ -1,6 +1,3 @@
-
-
-
 .buttons {
     padding: 6px 4px;
     box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.5);
@@ -8,11 +5,13 @@
     background: #757171;
     text-decoration: none;
     color: rgb(0, 0, 0);
-    font-size: 12px;
+    font-size: 20px;
     letter-spacing: .08em;
     border: 1px;
     border-radius: 3px;
-    width: 150px;
+    width: 300px;
+    height: 40px;
+    opacity: 0.95;
   }
 
   body {
@@ -85,4 +84,9 @@ table {
 #riegoy {
   margin-top: 1390px;
   margin-left: 750px;
+}
+
+#tarin {
+  margin-top: 730px;
+  margin-left: 1300px;
 }
