--- a/mgussegdlet/app/src/main/assets/style.css
+++ b/mgussegdlet/app/src/main/assets/style.css
@@ -52,8 +52,8 @@ td {
 
 
 body {
-  background-image: url("htmlmedia/kargen3.jpg");
-  background-size: 150%;
+  background-image: url("htmlmedia/satan.jpg");
+  background-size: 100%;
   width: 100%;
   height: 100%;
 }
