--- a/mgussegdlet/app/src/main/assets/style.css
+++ b/mgussegdlet/app/src/main/assets/style.css
@@ -52,8 +52,7 @@ td {
 
 
 body {
-  background-image: url("htmlmedia/satan.jpg");
-  background-size: 100%;
-  width: 100%;
+  background-image: url("htmlmedia/indexwall.jpg");
+  width: auto;
   height: 100%;
 }
