--- a/mgussegdlet/app/src/main/assets/style2.css
+++ b/mgussegdlet/app/src/main/assets/style2.css
@@ -45,7 +45,7 @@ body {
 
 button {
     width: 80%;
-    padding: 20px;
+    height: 5%;
     font-size: 24px;
     opacity: 0.7;
     margin-top: 20px;
@@ -59,14 +59,14 @@ table {
 
 @keyframes drop {
     100% {
-        transform: translateY(30%);
+        transform: translateY(20%);
     }
 }
 
 #vilagbutton {
     background-image: url("htmlmedia/vilag.jpg");
     background-position: 30%;
-    color: darkblue;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     backdrop-filter: blur 2px;
     opacity: 0.7;
@@ -77,7 +77,7 @@ table {
     background-position: 10% 20%;
     background-repeat: no-repeat;
     background-size: 100%;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-weight: bold;
     
 
@@ -88,7 +88,7 @@ table {
     background-position: 50% 10%;
     background-repeat: no-repeat;
     background-size: 100%;
-    color: darkgreen;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     backdrop-filter: blur 2px;
     opacity: 0.7;
@@ -101,7 +101,7 @@ table {
     background-position: 70% 40%;
     background-repeat: no-repeat;
     background-size: 100%;
-    color: red;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     backdrop-filter: blur 2px;
     opacity: 0.7;
@@ -109,7 +109,27 @@ table {
 }
 
 #gomb {
-    background-color: grey;
+    color: rgb(0, 0, 0);
     font-size: 30px;
     opacity: 0.6;
+    background-image: url("htmlmedia/indexwall.jpg");
+    background-position: 70% 40%;
+    background-size: 100%;
+}
+
+h4 {
+    max-height: 36px;
+    font-size: 20px;
+    background-color: grey;
+    width: 160px;
+    border-radius: 8px;
+    padding: 3px;
+    display: inline-block;
+    opacity: 0.8;
+}
+
+#lathatatlan {
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
 }
