style-ok az országokhoz OK

--- a/mgussegdlet/app/src/main/assets/stylevilag.css
+++ b/mgussegdlet/app/src/main/assets/stylevilag.css
@@ -21,7 +21,19 @@
   body {
     text-align: center;
     position: relative;
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
   }
+  
+  @keyframes fadeInAnimation {
+    0% {
+      opacity: 0;
+    } 100% {
+      opacity: 1;
+    }
+  }
+
 
 table {
     position: fixed;
