--- a/mgussegdlet/app/src/main/assets/style.css
+++ b/mgussegdlet/app/src/main/assets/style.css
@@ -1,3 +1,17 @@
+body {
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  } 100% {
+    opacity: 1;
+  }
+}
+
 #divek {
     opacity: 0.85;
     padding: 4px;
