--- a/magusd203/app/src/main/assets/fajok.css
+++ b/magusd203/app/src/main/assets/fajok.css
@@ -2,7 +2,32 @@
 body {
     font-family: 'Rubik';
     animation: bodyslide 4s forwards;
+    background-color: black;
+    color: white;
 }
 
+#text {
+    position: relative;
+    font-family: 'Rubik';
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: justify;
+}
 
+#menudiv {
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    background-color: gray;
+    opacity: 0.8;
+    height: 40px;
+}
 
+#menuselector {
+    padding: 10px;
+    width: 170px;
+    text-align: center;
+    font-family: 'Rubik';
+    border-radius: 4px;
+    padding: 8px;
+}
