--- a/magusd203/app/src/main/assets/fajok.css
+++ b/magusd203/app/src/main/assets/fajok.css
@@ -1,32 +1,40 @@
 
 body {
-    font-family: 'Rubik';
+    font-family: 'Rubik', cursive;
     animation: bodyslide 4s forwards;
     background-color: black;
     color: white;
+    animation: fadeIn 4s forwards;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
 
 #text {
     position: relative;
-    font-family: 'Rubik';
+    font-family: 'Rubik', cursive;
     margin-left: 1%;
     margin-right: 1%;
     text-align: justify;
+    
 }
 
 #menudiv {
-    position: fixed;
-    text-align: center;
     width: 100%;
-    background-color: gray;
-    opacity: 0.8;
+    background-color: black;
+
+    
 }
 
 #menuselector {
+    position: fixed;
+    font-size: 16px;
     padding: 10px;
-    width: 170px;
     text-align: center;
-    font-family: 'Rubik';
-    border-radius: 4px;
-    padding: 8px;
+    font-family: 'Rubik', cursive;
+    border-radius: 3px;
+    width: 100%;
+    border: 0px;
 }
